--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-1.40MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: 38.143.66.20, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇨🇦 加拿大-256.5KB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇫🇷 法国-391.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-951.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-311.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-580.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-696.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-996.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-686.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-1.01MB/s(Youtube:不良林), server: 38.143.66.20, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-238.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 38.143.66.20, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-509.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-328.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-400.4KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-256.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-391.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-951.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-311.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-696.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-996.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-509.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-256.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-391.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-951.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-311.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-696.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-996.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-509.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-256.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-391.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-951.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-311.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-696.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-996.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-509.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-256.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-391.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-951.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-311.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-696.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-996.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-509.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-256.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-391.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-951.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-311.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-696.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-996.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-509.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-256.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-391.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-951.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-311.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-696.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-996.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-509.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-256.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-391.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-951.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-311.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-696.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-996.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-509.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
