--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-686.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-696.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 38.143.66.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-936.9KB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇯🇵 日本-1.40MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: 38.143.66.20, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-328.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-400.4KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇩🇪 德国-1.59MB/s(Youtube:不良林), server: 162.55.231.78, port: 443, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇸🇬 新加坡-3.27MB/s(Youtube:不良林), server: 43.134.229.238, port: 20085, type: vmess, uuid: eb35ce5a-7b4d-4fbc-d23f-a57c74872634, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-888.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.83MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-911.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇫🇷 法国-672.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-659.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-579.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-539.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-715.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-696.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-936.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-888.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-672.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-659.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-696.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-936.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-888.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-672.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-659.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-696.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-936.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-888.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-672.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-659.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-696.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-936.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-888.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-672.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-659.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-696.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-936.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-888.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-672.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-659.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-696.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-936.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-888.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-672.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-659.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-696.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-936.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-400.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-888.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-672.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-659.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
