--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-936.9KB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-1.40MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-1.83MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-911.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇫🇷 法国-672.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-659.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-579.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-539.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-715.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-539.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.95MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-200.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-450.3KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-906.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-427.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-411.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-841.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-936.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-672.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-659.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-427.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-841.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-936.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-672.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-659.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-427.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-841.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-936.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-672.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-659.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-427.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-841.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-936.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-672.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-659.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-427.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-841.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-936.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-672.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-659.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-427.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-841.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-936.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-672.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-659.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-427.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-841.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-936.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-672.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-659.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-539.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-427.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-841.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
